# matrx-dream-service

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/matrx_dream_service/: __init__.py  cli.py
src/matrx_dream_service/commands/: create_microservice.py
src/matrx_dream_service/matrx_microservice/: __init__.py  cli.py  contents.py  default_template.py  generator.py  github_utils.py
src/matrx_dream_service/templates/microservice/: cookiecutter.json
src/matrx_dream_service/templates/microservice/{{cookiecutter.app_dirname}}/: .env  Dockerfile  entrypoint.sh  migrations.py  pyproject.toml  run.py
src/matrx_dream_service/templates/microservice/{{cookiecutter.app_dirname}}/app_schema/: __init__.py  conversion_functions.py  schema.py  validation_functions.py
src/matrx_dream_service/templates/microservice/{{cookiecutter.app_dirname}}/core/: app.py  settings.py  system_logger.py
src/matrx_dream_service/templates/microservice/{{cookiecutter.app_dirname}}/database/: db_conf.py
src/matrx_dream_service/templates/microservice/{{cookiecutter.app_dirname}}/services/: app_factory.py  {{cookiecutter.app_primary_service_name}}.py
tests/: basic_generation.py  sample_generation_config.json
