[project]
name = "{{cookiecutter.app_name}}"
version = "0.0.1"
description = "{{cookiecutter.app_name}} service"
readme = "README.md"
requires-python = ">={{cookiecutter.minimum_python_version}}"
dependencies = [
    "uvicorn>=0.31.0",
    "pydantic-settings>=2.9.1",
    "concurrent-log-handler>=0.9.25",
    "matrx-utils",
    "matrx-connect",
    "matrx-orm",
    "python-socketio>=5.13.0"
]

[tool.uv.sources]
matrx-utils = { git = "https://github.com/armanisadeghi/matrx-utils" }
matrx-orm = { git = "https://github.com/armanisadeghi/matrx-orm" }
matrx-connect = { git = "https://github.com/armanisadeghi/matrx-connect" }
