[project]
name = "{{cookiecutter.app_name}}"
version = "0.0.1"
description = "{{cookiecutter.app_name}} service"
readme = "README.md"
requires-python = ">={{cookiecutter.minimum_python_version}}"
dependencies = [
    "uvicorn",
    "pydantic-settings",
    "concurrent-log-handler",
    "matrx-utils",
    "matrx-connect",
    "matrx-orm",
    "python-socketio"
]

[tool.uv.sources]
matrx-utils = { git = "https://github.com/armanisadeghi/matrx-utils" }
matrx-orm = { git = "https://github.com/armanisadeghi/matrx-orm" }
matrx-connect = { git = "https://github.com/armanisadeghi/matrx-connect" }
